Split CLI and web modules